versiones de jdk/ pestañas funcionando